<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="2dp">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_padding"
        app:columnCount="3">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/league"
            app:layout_gravity="fill"
            tools:text="@string/league"/>

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/matchday"
            app:layout_gravity="fill"
            tools:text="@string/matchday"/>

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            app:layout_gravity="fill"
            tools:text="@string/test_text"/>

        <View
            android:id="@+id/divider_view"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/divider_margin_vertical"
            android:layout_marginTop="@dimen/divider_margin_vertical"
            android:background="@color/grey_200"
            app:layout_columnSpan="3"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_columnWeight="2"
            app:layout_gravity="fill">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/TeamNames"
                tools:text="@string/hometeam"/>

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="@dimen/crest_width"
                android:layout_height="@dimen/crest_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/list_score_padding"
            app:layout_columnWeight="1"
            app:layout_gravity="fill">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/Score"
                tools:text="@string/score"/>

            <TextView
                android:id="@+id/status_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                app:layout_gravity="center"
                tools:text="@string/status"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_columnWeight="2"
            app:layout_gravity="fill">

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="@dimen/crest_width"
                android:layout_height="@dimen/crest_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/away_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/TeamNames"
                tools:text="@string/awayteam"/>

        </LinearLayout>


    </android.support.v7.widget.GridLayout>
</android.support.v7.widget.CardView>
